@@ -1,5 +1,10 @@
 2008-09-08  Pedro Alves  <pedro@codesourcery.com>
 
+	* bsd-uthread.c (bsd_uthread_find_new_threads): Claim the main
+	thread.
+
+2008-09-08  Pedro Alves  <pedro@codesourcery.com>
+
 	* corelow.c (add_to_thread_list): If this is the first time we
 	hear about thread info, update inferior_ptid.
 	(core_open): Clear the thread list and set inferior_ptid before
